--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,12 +1,8 @@
-@import ../../bourbon/bourbon
-
 $default-font: "OpenSansRegular", sans-serif
 
-$accent: #f94b02
-$blue: #2E4272
-$color: #222
-$white: #fafafa
-$green: #55aa55
+$accent: #f8665a
+$color: #141414
+$white: #fefefe
 
 @mixin mt($time)
   transition: all $time ease
