--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -13,7 +13,6 @@
   background-color: rgba(0, 0, 0, .5)
   z-index: 10
 
-
 .main-head
   color: $white
   position: relative
@@ -32,6 +31,8 @@
         padding: 7px 20px
   .header-content
     padding-top: 10%
+    .adv-list
+      margin-top: 40px
     h1
       margin-bottom: 50px
 
@@ -94,7 +95,6 @@
   +mt(.25s)
   .col-sm-12
     padding: 0
-
 
 .s-contacts
   background-color: lighten($color, 20%)
