--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -1,4 +1,3 @@
-@import ../../bourbon/bourbon
 @import vars
 
 *::-webkit-input-placeholder
@@ -38,7 +37,7 @@ body
   line-height: 1.4
   color: $white
   background-color: $color
-  font-family: $default-font
+  font-family: "Segoe UI", sans-serif
   overflow-x: hidden
 
 section
@@ -49,7 +48,7 @@ section
 
 hr
   margin: 0
-  border-top: 1px solid lighten($color, 50% )
+  border-top: 1px solid lighten($color, 50%)
 
 .responsive-img
   display: block
@@ -64,7 +63,6 @@ h1
   font-family: "OpenSansLight", sans-serif
   font-size: em(48px)
   line-height: 1.2
-
 
 h2
   font-family: "OpenSansLight", sans-serif
@@ -142,7 +140,8 @@ b, strong
 
 //Размытие при всплывающем окне
 *
- transition: filter .25s ease
+  transition: filter .25s ease
+
 .mfp-wrap ~ *
   filter: blur(5px)
 
