Сайт готов, на продакшне. Жду правок.

--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,4 +1,5 @@
-$default-font: "OpenSansRegular", sans-serif
+$default-font: "Segoe UI", sans-serif
+$margin: 24px
 
 $accent: #f8665a
 $color: #141414
