--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -31,7 +31,7 @@ textarea:focus:-ms-input-placeholder
 body
   margin: 0
   padding: 0
-  font-size: 16px
+  font-size: 17px
   min-width: 320px
   position: relative
   line-height: 1.4
@@ -56,21 +56,21 @@ hr
   height: auto
 
 h1, h2, h3, h4, h5, h6
-  font-family: "OpenSansSemiBold", sans-serif
-  font-weight: 500
+  font-family: "Open Sans SemiBold", sans-serif
 
 h1
-  font-family: "OpenSansLight", sans-serif
+  font-family: "Open Sans Light", sans-serif
   font-size: em(48px)
   line-height: 1.2
 
 h2
-  font-family: "OpenSansLight", sans-serif
+  font-family: "Open Sans Light", sans-serif
   font-size: em(36px)
 
 h3, h4
-  font-family: "OpenSansSemiBold", sans-serif
+  font-family: "Open SansSemi Bold", sans-serif
   text-transform: uppercase
+  font-weight: bold
 
 h3
   font-size: em(18px)
@@ -86,7 +86,7 @@ a
     text-decoration: none
 
 b, strong
-  font-family: "OpenSansSemiBold", sans-serif
+  font-family: "Open Sans SemiBold", sans-serif
   font-weight: normal
 
 .fa
@@ -119,7 +119,7 @@ b, strong
   border: 1px solid $accent
   box-shadow: 0 4px 0 darken($accent, 6%)
   color: $accent
-  font-family: "OpenSansSemiBold", sans-serif
+  font-family: "Open Sans SemiBold", sans-serif
   &:hover
     background-color: $accent
   &:active, &:focus
