--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,8 +1,8 @@
-@import ../../bourbon/bourbon
-@import fonts
-@import libs
-@import vars
-@import settings
+$output-bourbon-deprecation-warnings: false !default
+@import "../bourbon/bourbon"
+@import "vars"
+@import "libs"
+@import "settings"
 
 .mbYTP_wrapper::before
   display: block
@@ -13,93 +13,108 @@
   background-color: rgba(0, 0, 0, .5)
   z-index: 10
 
+
 .main-head
   color: $white
   position: relative
   min-height: 100vh
   .top-line
     padding: 20px 0
-    h3
-      margin-top: 0
+    .top-title
+      h3
+        margin-top: 20px
+        text-transform: none
+        font-family: "Open Sans SemiBold", sans-serif
+        font-size: em(22px)
+      p
+        margin-top: 20px
+        font-size: em(18px)
     .top-phone
       text-align: right
       p
         margin-top: 0
-        font-family: "Exo2Bold", serif
+        font-family: "Exo 2", serif
+        font-weight: bold
         font-size: 20px
       .button
         padding: 7px 20px
+  +media-xs(down)
+    .top-line
+      text-align: center
+      .top-phone
+        text-align: center
+    h1
+      font-size: em(38px)
   .header-content
     padding-top: 10%
-    .adv-list
-      margin-top: 40px
+    .top-list
+      margin-top: 50px
     h1
       margin-bottom: 50px
 
-.s-about
-  &-item
-    img
-      width: 150px
-      margin-bottom: 20px
 
 .s-features
   color: $white
-  img
-    width: 150px
-    margin-bottom: 20px
+  .s-feat-item
+    margin-bottom: 30px
+    .img-svg
+      width: 150px
+      height: auto
+      margin-bottom: 20px
+      +mt(.5s)
+    &:hover
+      .img-svg
+        path
+          fill: $accent !important
+        transform: scale(1.1)
+      .item-text
+        h4
+          color: $accent
+
+
+
+.s-about
+  .about-wrapper
+    display: flex
+    flex-direction: row
+    justify-content: space-around
+    flex-wrap: nowrap
+    +media-xs(down)
+      flex-direction: column
+      align-items: center
+  &-item
+    max-width: 150px
+    img
+      width: 150px
+      margin-bottom: 20px
+      +media-sm(down)
+        width: 120px
+  .button
+    margin-top: 40px
+
 
 .s-works
-  .col-md-3
-    padding: 5px 5px
-  .slide
-    position: relative
-    overflow: hidden
-    display: block
-    a
-      display: block
-    &:hover
-      .slide-content
-        opacity: 1
-        transform: scale(.95)
+  .popup-gallery
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    +media-sm(down)
+      flex-direction: column
+      align-items: center
+  .works-item
+    width: 450px
+    padding: 10px 10px
+    margin-bottom: 20px
     img
-      object-fit: contain
-      +mt(.5s)
-    &-content
-      position: absolute
-      color: darken($color, 10%)
-      padding-top: 10%
-      top: 0
-      left: 0
-      width: 100%
-      height: 100%
-      opacity: 0
-      background-color: rgba($white, .65)
-      text-align: center
-      +mt(.5s)
-      transform: scale(1.1)
-      .fa
-        color: darken($color, 10%)
-        font-size: 40px
-        padding: 20px 20px 5px
-  h3
-    text-transform: none
-    font-size: em(20px)
+      max-width: 100%
 
-.slide-popup
-  position: relative
-  background-color: #fff
-  max-width: 900px
-  margin: auto
-  text-align: center
-  display: block
-  +mt(.25s)
-  .col-sm-12
-    padding: 0
+
 
 .s-contacts
   background-color: lighten($color, 20%)
   color: $white
   padding-top: 60px
+
 
 .form
   display: block
@@ -131,6 +146,7 @@
   .button
     margin-top: 20px
 
+
 .contacts-text
   h3
     margin: 20px 0 20px
@@ -152,6 +168,7 @@
       .img-svg
         path
           fill: $accent !important
+
 
 .form.form-callback
   background-color: rgba($white, .1)
